--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
             
             
         </style>
-            <img src="fofo.jpg" class="img-fluid" alt="Imagem responsiva">
+            <img src="fofo.png" class="img-fluid" alt="Imagem responsiva">
     </body>
 </html>
